Fix iPad mini experience and removed scrollers on mobile

--- a/src/components/organisms/SVGMap/styles/europeMap.styles.scss
+++ b/src/components/organisms/SVGMap/styles/europeMap.styles.scss
@@ -12,14 +12,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  /* fallback for old browsers */
-
-  /*   background: -webkit-linear-gradient(
-    to right,
-    #101f38,
-    #1e3c72
-  );
-  background: linear-gradient(to right, #101f38, #1e3c72); */
 
   .hovered-country {
     stroke-width: 1px;
@@ -28,15 +20,4 @@
   path {
     cursor: pointer;
   }
-
-  /* background: -webkit-linear-gradient(
-    to right,
-    #2a5298,
-    #1e3c72
-  ); */ /* Chrome 10-25, Safari 5.1-6 */
-  /* background: linear-gradient(
-    to right,
-    #2a5298,
-    #1e3c72
-  );   W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
